# Amesmarkdown

./: README.md
Amesmarkdown/: README.md  pyproject.toml
Amesmarkdown/macos/: INSTALL_APP.md  amesmarkdown_launcher.c
Amesmarkdown/macos/Amesmarkdown.app/Contents/: Info.plist
Amesmarkdown/macos/Amesmarkdown.app/Contents/MacOS/: Amesmarkdown
Amesmarkdown/macos/Amesmarkdown.app/Contents/Resources/: Amesmarkdown.icns
Amesmarkdown/src/Amesmarkdown.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Amesmarkdown/src/mdconvert.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Amesmarkdown/src/mdconvert_app/: __init__.py  assets.py  cli.py  gui.py  markdown_utils.py  menubar_app.py  models.py  service.py
Amesmarkdown/src/mdconvert_app/converters/: __init__.py  docx_converter.py  markdown_export.py  pdf_converter.py  pptx_converter.py  xlsx_converter.py
Amesmarkdown/tests/: test_gui_settings.py  test_markdown_utils.py  test_service.py
